<resources>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="search_hint">O que você precisa ?</string>

    <!-- NEW -->
    <string name="app_name">Canal Café</string>
    <string name="login_nome">Nome</string>
    <string name="login_email">E-mail</string>
    <string name="login_password">Senha</string>
    <string name="login_sexo">Sexo</string>
    <string name="button_entrar">Entrar</string>
    <string name="button_put_money">Colocar Saldo</string>
    <string name="button_buy">Comprar</string>
    <string name="register">Cadastrar</string>


<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="lore">Lorem Ipsum is simply dummy text of the printing and .</string>
    <string name="title_activity_services">ServicesActivity</string>
    <string name="title_activity_service">ServiceActivity</string>
    <string name="entrar">Entrar com Facebook</string>

    <string name="sair">Sair</string>
    <string name="servicos">Serviços</string>
    <string name="title_activity_avaliar_estrelas">"Avaliar "</string>
    <string name="avaliar">Avaliar</string>
    <string name="avaliado_sucesso">Obrigado!</string>
    <string name="fazer_login">Para avaliar um serviço efetue o login!</string>
    <string name="comentario">Comentário</string>
    <string name="avaliado_erro">Ops! Tente novamente mais tarde.</string>
    <string name="deletado">Apagado</string>
    <string name="Filtrar">Filtrar</string>
    <string name="maior_preco">Maior Preço</string>
    <string name="menor_preco">Menor Preço</string>
    <string name="cidade">Cidade</string>
    <string name="ordenar">Ordenar</string>
    <string name="melhor_avaliacao">Avaliação</string>
    <string name="title_activity_cidade">CidadeActivity</string>
    <string name="cidades">Cidades</string>
    <string name="avaliacao">Avaliação</string>
    <string name="preco">Preço</string>
    <string name="nenhum">Nenhum resultado encontrado!</string>
</resources>
